# my-compiler

./: CMakeLists.txt  Makefile
include/: lexical.h
src/: lexical.cpp  main.cpp  utils.cpp
